--- a/trunk/Informe/porfuncionalidad.tex
+++ b/trunk/Informe/porfuncionalidad.tex
@@ -1021,6 +1021,7 @@ post:
 %-------------
 Por otro lado tambien mostramos la interaccion con el sistema en los casos de uso  \ref{pid} Pidiendo Informe Detalles de movimiento por Jugador, \ref{pie} Pidiendo Informe Estado Actual y \ref{pir} Pidiendo Informe Ranking de Jugadores
 
+\label{pid}
 \begin{cu}{\infdmj}
 	\descripxizq=1cm
 		\defln{ Este caso de uso explica como el \emk solicita informe de detalles de movimientos por jugador }
@@ -1046,6 +1047,7 @@ Por otro lado tambien mostramos la interaccion con el sistema en los casos de us
 \end{flushleft}
 \end{cu}
 %-----------------------
+\label{pir}
 \begin{cu}{\infdmj}
 	\descripxizq=1cm
 		\defln{ Este caso de uso explica como el \emk solicita informe 'Ranking de jugadores' }
@@ -1072,6 +1074,7 @@ Por otro lado tambien mostramos la interaccion con el sistema en los casos de us
 \end{cu}
 
 %-----------------------
+\label{pie}
 \begin{cu}{\infdmj}
 	\descripxizq=1cm
 		\defln{ Este caso de uso explica como el \emk solicita informe 'Estado Actual' }
@@ -1101,7 +1104,7 @@ Por otro lado tambien mostramos la interaccion con el sistema en los casos de us
 
 Se explicaran aqui con detalle como se refleja el pago de apuestas en el modelo propuesto (Modelo de Clases)
 
-\textbf{NOTA: } Esta seccion esta dirigida a solo a lectores con conocimientos de modelo de clases conceptuales y OCL. El las secciones de \textbf{Juego Tragamonedas} y \textbf{Juego Craps} se explica cuando un jugador debe cobrar
+\textbf{NOTA: } Esta seccion esta dirigida a solo a lectores con conocimientos de modelo de clases conceptuales y OCL. El las secciones de \ref{sjt} \textbf{Juego Tragamonedas} y \ref{sjc} \textbf{Juego Craps} se explica cuando un jugador debe cobrar
 
 \subsubsection{Pago jugada Tragamonedas}
 
