--- a/trunk/Informe/an5.tex
+++ b/trunk/Informe/an5.tex
@@ -1,8 +1,8 @@
+\begin{framed}
+\depto Esta es la operacion que quedo como el TP original que esta ``Harcodeada''. \textbf{SERGIO: } Por lo que hablamos nos permitiste dejarla tal cual estaba.
+\end{framed}
 
 \begin{framed}
-%\lstset{language=ocl}
-%\lstset{commentstyle=\textit}
-%\begin{lstlisting}[frame=trbl]{}
 \begin{lstlisting}[breaklines=true]
 pagoApuestaPaseDelinea(j: jugadaCraps, ap: ApuestaCraps, 
    jug:jugador, jorn: Jornada) : void
