--- a/Informe/imc.tex
+++ b/Informe/imc.tex
@@ -113,6 +113,7 @@ MesaTraga.allInstances()->forAll(a | a <> self implies a.id <> self.id)
 
 \end{lstlisting}
 
+\newpage
 \subsubsection{Invariantes relacionados con el juego tragamonedas}
 \lstset{language=ocl}
 \lstset{commentstyle=\textit}
