--- a/Informe/porfuncionalidad.tex
+++ b/Informe/porfuncionalidad.tex
@@ -154,6 +154,7 @@ La forma en que un cliente ingresa o egresa del casino esta explicado con los si
 	\end{cursoe}		
 \end{cu}
 
+\newpage
 \subsection{Administracion del Casino}
 
 \subsubsection{Apertura del casino}
@@ -177,6 +178,7 @@ Como se puede ver en el diagrama, el administrador puede ingresar alguna de las 
 \vskip1cm
 Por otro lado con el caso de uso \ac \ref{lac}, se explica la interaccion con el sistema.
 
+\newpage
 %-------------------------------------------------------
 % CASO DE USO ABRIENDO CASINO
 %-------------------------------------------------------
@@ -558,6 +560,7 @@ Por otro lado se explicará con los casos de uso \ref{imt}, \ref{jut} y ,\ref{smt
 
 \end{cu}
 
+\newpage
 %-------------------------------------------------------
 % CASO DE USO JUGANDO TRAGAMONEDAS
 %-------------------------------------------------------
@@ -606,6 +609,8 @@ Por otro lado se explicará con los casos de uso \ref{imt}, \ref{jut} y ,\ref{smt
 \end{itemize}
 
 \end{cu}
+
+\newpage
 %------------------------------------------------------
 % CASO DE USO Saliendo de mesa de trgamonedas
 %------------------------------------------------------
@@ -637,6 +642,8 @@ Por otro lado se explicará con los casos de uso \ref{imt}, \ref{jut} y ,\ref{smt
 
 \begin{framed}
 
+\newpage
+
 \depto Con esta maquina de estados finitos (FSM) mostramos el desarrollo del juego tragamonedas, modelando solo la parte de cobrar o no. 
 \\
 {\large FSM: JugadaTragamonedas$_i$}
@@ -667,6 +674,7 @@ Aqui se refleja el siguiente requerimiento: El juego Tragamonedas debe contar co
 
 \end{framed}
 
+\newpage
 \subsection{Juego Craps \label{sjc}}
 
 Otro de los juegos elegidos por los socios es el \textbf{Craps}. Esto satisface el requerimiento \textbf{Proveer juego Craps: Se proveera el juego de Craps respetando las reglas provistas por los clientes.} \label{10a}\\
@@ -711,10 +719,6 @@ Cada una de estas actividades se explican con mas detalle en los casos de uso \r
 %------------------------------------------------------
 % CASO DE USO Jugando Craps
 %------------------------------------------------------
-%\paragraph{Comentario: }
-%\begin{flushleft}
-%
-%\end{flushleft}
 \label{jc}
 \begin{cu}{\jugcr}
 	\descripxizq=3cm
@@ -752,7 +756,9 @@ Cada una de estas actividades se explican con mas detalle en los casos de uso \r
 	\item Proveer juego Craps
 \end{itemize}
 \end{flushleft}
-\end{cu}	
+\end{cu}
+
+\newpage	
 %-------------------------------
 %CASO DE USO APOSTANDO EN CRAPS
 %--------------------------------
@@ -791,7 +797,8 @@ Cada una de estas actividades se explican con mas detalle en los casos de uso \r
 \end{itemize}
 
 \end{cu}
-		
+	
+\newpage	
 %----------------------------------------------------------
 % CASO DE USO Saliendo de mesa de Craps
 %----------------------------------------------------------
@@ -844,8 +851,6 @@ Con esta FSM modelamos la eleccion del tirador.
 \begin{center}
 \includegraphics[scale=0.5]{img/coupier.png}
 \end{center}
-
-
 
 {\large FSM: Jugada Craps}
 \begin{center}
@@ -1110,6 +1115,7 @@ Se explicaran aqui con detalle como se refleja el pago de apuestas en el modelo 
 
 \input{an4.tex}
 
+\newpage
 \subsubsection{Pago jugada Craps}
 
 \vskip1cm
