--- a/trunk/Informe/lr.tex
+++ b/trunk/Informe/lr.tex
@@ -29,9 +29,9 @@
 
 \item\textsc{REQUERIMIENTOS GENERALES DEL CASINO - PANTALLA}
 \begin{enumerate}
-\item Las pantallas mostraran la información necesaria para el desarrollo del juego: Las pantallas mostrarán la interfaz del juego asi como tambien todas las opciones disponibles dentro del juego.  \ff - \ii
-\item Las pantallas mostraran la información necesaria del estado del juego: Las pantallas mostraran el tipo de jugada, estado actual del juego y resultados, y será inmediatamente actualizada ante cualquier cambio o variación.  \ff - \ii
-\item Las pantallas mostraran el estado de la cuenta del jugador: Por pantalla se podrá ver si un jugador esta dentro del casino y dentro de algun juego y si es así en que mesa, si ha resultado ganador o no, y su correspondiente saldo.  \ff - \dd
+\item Las pantallas mostraran la información necesaria para el desarrollo del juego: Las pantallas mostrarán la interfaz del juego asi como tambien todas las opciones disponibles dentro del juego.  \ff - \ii. \rrr \ref{3a}
+\item Las pantallas mostraran la información necesaria del estado del juego: Las pantallas mostraran el tipo de jugada, estado actual del juego y resultados, y será inmediatamente actualizada ante cualquier cambio o variación.  \ff - \ii. \rrr \ref{3b}
+\item Las pantallas mostraran el estado de la cuenta del jugador: Por pantalla se podrá ver si un jugador esta dentro del casino y dentro de algun juego y si es así en que mesa, si ha resultado ganador o no, y su correspondiente saldo.  \ff - \dd. \rrr \ref{3c}
 \end{enumerate}
 
 \item\textsc{REQUERIMIENTOS GENERALES DEL CASINO - CONFIGURACION}
