--- a/Informe/lr.tex
+++ b/Informe/lr.tex
@@ -55,7 +55,7 @@
 
 \item\textsc{REQUERIMIENTOS GENERALES DEL CASINO - JUGADAS Y POZOS}
 \begin{enumerate}
-\item Mostrar en todo momento el monto de los pozos: En todo momento se mostrara el monto actualizado de todos los pozos del casino, y se actualizará inmediatamente a medida que varie. \ff - \ii
+\item Mostrar en todo momento el monto de los pozos: En todo momento se mostrara el monto actualizado de todos los pozos del casino, y se actualizará inmediatamente a medida que varie. \ff - \ii. \rrr \ref{7a}
 \item Generar jugada feliz automáticamente: La jugada feliz se generara en base a probabilidades.  \ff - \ee. \rrr \ref{7b}
 \item Generar jugada todos ponen automáticamente: La jugada todos ponen tambien se generara en base a probabilidades.  \ff - \ee. \rrr \ref{7c}
 \item No se debe permitir el solapamiento de jugadas felices en el mismo instante: Si ha ocurrido una, entonces no podra ocurrir otra hasta que se pague la jugada existente y se supere el monto minimo, aunque pueden ocurrir en cualquiera de las mesas del casino pero no simultaneamente.  \ff - \ii. \rrr \ref{7d}
