--- a/Informe/porfuncionalidad.tex
+++ b/Informe/porfuncionalidad.tex
@@ -869,11 +869,12 @@ En este seccion mostramos los prototipos de pantallas.
 
 \paragraph{Se satisfacen los requerimientos}
 
-\begin{enumerate}
+\begin{itemize}
 \item Las pantallas mostraran la información necesaria para el desarrollo del juego: Las pantallas mostrarán la interfaz del juego asi como tambien todas las opciones disponibles dentro del juego. \label{3a}
 \item Las pantallas mostraran la información necesaria del estado del juego: Las pantallas mostraran el tipo de jugada, estado actual del juego y resultados, y será inmediatamente actualizada ante cualquier cambio o variación.\label{3b}  
 \item Las pantallas mostraran el estado de la cuenta del jugador: Por pantalla se podrá ver si un jugador esta dentro del casino y dentro de algun juego y si es así en que mesa, si ha resultado ganador o no, y su correspondiente saldo.  \label{3c}
-\end{enumerate}
+\item Mostrar en todo momento el monto de los pozos: En todo momento se mostrara el monto actualizado de todos los pozos del casino, y se actualizará inmediatamente a medida que varie.\label{7a}
+\end{itemize}
 
 
 \subsection{Generacion de reportes}
