--- a/Informe/porfuncionalidad.tex
+++ b/Informe/porfuncionalidad.tex
@@ -830,7 +830,8 @@ Cada una de estas actividades se explican con mas detalle en los casos de uso \r
 \end{itemize}
 \end{cu}
 
-
+\newpage
+	
 \begin{framed}
 
 \depto Con estas maquinas de estados finitos (FSM) mostramos el desarrollo del juego craps. Incluyendo entre ellas un seleccionador, un tirador y cada una de las apuestas. 
@@ -852,6 +853,8 @@ Con esta FSM modelamos la eleccion del tirador.
 \includegraphics[scale=0.5]{img/coupier.png}
 \end{center}
 
+\newpage
+
 {\large FSM: Jugada Craps}
 \begin{center}
 \includegraphics[scale=0.25]{img/desarrolloCraps.png}
@@ -866,6 +869,38 @@ Con esta FSM explicamos una jugada de manera general, es decir sin las apuestas.
 \subsection{Pantallas}
 
 En este seccion mostramos los prototipos de pantallas.
+
+
+
+
+
+
+{\large FSM: Jugada Craps}
+\begin{center}
+\includegraphics[scale=0.25]{../pantallas/desarrolloCraps.png}
+\end{center}
+
+{\large FSM: Jugada Craps}
+\begin{center}
+\includegraphics[scale=0.25]{../pantallas/jugandoCraps.PNG}
+\end{center}
+
+{\large FSM: Jugada Craps}
+\begin{center}
+\includegraphics[scale=0.25]{../pantallas/invitado.PNG}
+\end{center}
+
+{\large FSM: Jugada Craps}
+\begin{center}
+\includegraphics[scale=0.25]{../pantallas/ingresandoCraps.PNG}
+\end{center}
+
+{\large FSM: Jugada Craps}
+\begin{center}
+\includegraphics[scale=0.25]{img/dentrodelCasino.PNG}
+\end{center}
+
+\newpage
 
 \paragraph{Se satisfacen los requerimientos}
 
