* solo falta requerimientos no cumplidos  * termine de de reubicar pantallas

--- a/Informe/imc.tex
+++ b/Informe/imc.tex
@@ -158,6 +158,7 @@ self.apuestasTragamonedas->forAll(a | self.participoEn->
     includes(a.jugadaTragamonedas.mesa) )
 \end{lstlisting}
 
+\newpage
 \subsubsection{Invariantes relacionados con el juego craps}
 
 \lstset{language=ocl}
