--- a/Informe/lr.tex
+++ b/Informe/lr.tex
@@ -29,9 +29,9 @@
 
 \item\textsc{REQUERIMIENTOS GENERALES DEL CASINO - PANTALLA}
 \begin{enumerate}
-\item Las pantallas mostraran la información necesaria para el desarrollo del juego: Las pantallas mostrarán la interfaz del juego asi como tambien todas las opciones disponibles dentro del juego.  \ff - \ii. \rrr \ref{3a}
-\item Las pantallas mostraran la información necesaria del estado del juego: Las pantallas mostraran el tipo de jugada, estado actual del juego y resultados, y será inmediatamente actualizada ante cualquier cambio o variación.  \ff - \ii. \rrr \ref{3b}
-\item Las pantallas mostraran el estado de la cuenta del jugador: Por pantalla se podrá ver si un jugador esta dentro del casino y dentro de algun juego y si es así en que mesa, si ha resultado ganador o no, y su correspondiente saldo.  \ff - \dd. \rrr \ref{3c}
+\item Las pantallas mostraran la información necesaria para el desarrollo del juego: Las pantallas mostrarán la interfaz del juego asi como tambien todas las opciones disponibles dentro del juego.  \ff - \ii. \rrr \ref{3a1} y \ref{3a2}
+\item Las pantallas mostraran la información necesaria del estado del juego: Las pantallas mostraran el tipo de jugada, estado actual del juego y resultados, y será inmediatamente actualizada ante cualquier cambio o variación.  \ff - \ii. \rrr \ref{3b1} y \ref{3b2}
+\item Las pantallas mostraran el estado de la cuenta del jugador: Por pantalla se podrá ver si un jugador esta dentro del casino y dentro de algun juego y si es así en que mesa, si ha resultado ganador o no, y su correspondiente saldo.  \ff - \dd. \rrr \ref{3c1} y \ref{3c2}
 \end{enumerate}
 
 \item\textsc{REQUERIMIENTOS GENERALES DEL CASINO - CONFIGURACION}
@@ -55,7 +55,7 @@
 
 \item\textsc{REQUERIMIENTOS GENERALES DEL CASINO - JUGADAS Y POZOS}
 \begin{enumerate}
-\item Mostrar en todo momento el monto de los pozos: En todo momento se mostrara el monto actualizado de todos los pozos del casino, y se actualizará inmediatamente a medida que varie. \ff - \ii. \rrr \ref{7a}
+\item Mostrar en todo momento el monto de los pozos: En todo momento se mostrara el monto actualizado de todos los pozos del casino, y se actualizará inmediatamente a medida que varie. \ff - \ii. \rrr \ref{7a1} y \ref{7a2}
 \item Generar jugada feliz automáticamente: La jugada feliz se generara en base a probabilidades.  \ff - \ee. \rrr \ref{7b}
 \item Generar jugada todos ponen automáticamente: La jugada todos ponen tambien se generara en base a probabilidades.  \ff - \ee. \rrr \ref{7c}
 \item No se debe permitir el solapamiento de jugadas felices en el mismo instante: Si ha ocurrido una, entonces no podra ocurrir otra hasta que se pague la jugada existente y se supere el monto minimo, aunque pueden ocurrir en cualquiera de las mesas del casino pero no simultaneamente.  \ff - \ii. \rrr \ref{7d}
@@ -71,7 +71,7 @@
 \item\textsc{REQUERIMIENTOS DE JUEGO TRAGAMONEDAS}
 \begin{enumerate}
 \item Proveer juego Tragamonedas: Se proveera el juego del Tragamonedas respetando las reglas provistas por los clientes.  \ff - \ee. \rrr \ref{9a}
-\item El juego Tragamonedas debe contar con un premio gordo progresivo: El juego de Tragamonedas permitira incrementar el premio gordo progresivo usando un porcentaje de cada una de las jugadas para ser otorgado luego de superar el monto minimo configurado al que obtenga la combinacion ganadora y haya apostado las n veces anteriores al maximo numero de fichas. \ff - \ee. \rrr \ref{9b}
+\item El juego Tragamonedas debe contar con un premio gordo progresivo: El juego de Tragamonedas permitira incrementar el premio gordo progresivo usando un porcentaje de cada una de las jugadas para ser otorgado luego de superar el monto minimo configurado al que obtenga la combinacion ganadora y haya apostado las n veces anteriores al maximo numero de fichas. \ff - \ee. \rrr \ref{9b} y \ref{9b2}
 \item El cliente podrá elegir entre varios valores de fichas de las maquinas tragamonedas: Se podrá elegir una mesa de maquina tragamonedas de distintos valores entre los definidos. Una vez elegido el valor de la ficha para el tragamonedas este no se podrá cambiar hasta salir del juego.  \ff - \nd. \rrr \ref{9c}
 \end{enumerate}
 
