* listo para re-entrega

--- a/Tp1/Informe/lr.tex
+++ b/Tp1/Informe/lr.tex
@@ -6,6 +6,7 @@
 \newcommand{\ee}{{\bf Esencial }}
 
 \newcommand{\rrr}{{ \\ \bf Se menciona en: }}
+\newcommand{\nnn}{{ \\ \bf No cubierto por: }}
 
 \begin{enumerate}
 
@@ -82,16 +83,16 @@
 
 \item\textsc{REQUERIMIENTOS DE IMPLEMENTACION Y COMPORTAMIENTO}
 \begin{enumerate}
-\item El sistema debe funcionar en red.  \nf - \ee
-\item El sistema a implementarse deberá estar realizado en Java o C$\#$ \nf - \ii 
-\item El sistema debe ser facilmente extendible con nuevos juegos \nf - \ii 
+\item El sistema debe funcionar en red.  \nf - \ee. \nnn Requerimiento de Diseño
+\item El sistema a implementarse deberá estar realizado en Java o C$\#$ \nf - \ii. \nnn Requerimiento de Diseño
+\item El sistema debe ser facilmente extendible con nuevos juegos \nf - \ii. \nnn Requerimiento de Diseño
 \end{enumerate}
 
 
 \item\textsc{REQUERIMIENTOS DE FUNCIONALIDAD EXTRA}
 \begin{enumerate}
-\item Se podrán ver imagenes de los juegos en 3D \ff - \dd
-\item Los jugadores podran chatear entre ellos dentro del juego \ff - \dd
+\item Se podrán ver imagenes de los juegos en 3D \nf - \dd. \nnn Requerimiento no cubierto en esta fase
+\item Los jugadores podran chatear entre ellos dentro del juego \ff - \dd. \nnn Requerimiento no cubierto en esta fase
 \end{enumerate}
 
 \end{enumerate}
